Fix overflow on mobile.

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -8,6 +8,7 @@
 
 .highlight pre {
   border: 0;
+  overflow: overlay;
 }
 
 code {
